Update VS Code and TypeScript dependencies in package.json and pnpm-lock.yaml
- Changed '@types/vscode' version from 1.105.0 to 1.99.0 in both package.json and pnpm-lock.yaml.
- Updated the 'vscode' engine version in package.json to ^1.99.0 for compatibility.

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
   "description": "AI-powered Kanban board for markdown tasks from .agent/TASKS/",
   "devDependencies": {
     "@types/node": "24.8.1",
-    "@types/vscode": "1.105.0",
+    "@types/vscode": "1.99.0",
     "@vscode/vsce": "3.6.2",
     "typescript": "5.9.3"
   },
   "displayName": "Kaiban Markdown",
   "engines": {
-    "vscode": "1.80.0"
+    "vscode": "^1.99.0"
   },
   "main": "./out/extension.js",
   "name": "kaiban-md",
