--- a/package.json
+++ b/package.json
@@ -109,16 +109,16 @@
     }
   },
   "dependencies": {
-    "lucide": "0.460.0"
+    "lucide": "0.562.0"
   },
   "description": "AI-powered Kanban board for markdown tasks from .agent/TASKS/",
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
-    "@types/node": "24.8.1",
-    "@types/vscode": "1.99.0",
+    "@types/node": "25.0.3",
+    "@types/vscode": "1.107.0",
     "@vitest/coverage-v8": "4.0.16",
     "@vitest/ui": "4.0.16",
-    "@vscode/vsce": "3.6.2",
+    "@vscode/vsce": "3.7.1",
     "husky": "9.1.7",
     "lint-staged": "16.2.7",
     "typescript": "5.9.3",
@@ -126,7 +126,7 @@
   },
   "displayName": "Kaiban Markdown",
   "engines": {
-    "vscode": "1.99.0"
+    "vscode": "^1.99.0"
   },
   "keywords": [
     "kanban",
@@ -159,7 +159,7 @@
     "lint": "biome lint src/",
     "lint:fix": "biome lint --write src/",
     "package": "bun run compile && mkdir -p build && vsce package --no-dependencies --out build/",
-    "pre:install": "bun update && bun install",
+    "pre:install": "bun update --latest --recursive && bun install",
     "prepare": "husky",
     "pretest": "bun run compile",
     "test": "vitest run",
@@ -172,5 +172,5 @@
     "vscode:prepublish": "bun run compile",
     "watch": "tsc -watch -p ./"
   },
-  "version": "0.1.1"
+  "version": "0.2.0"
 }
