--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,30 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2020",
-    "outDir": "out",
-    "lib": ["ES2020"],
-    "sourceMap": true,
-    "rootDir": "src",
-    "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"]
+    "lib": [
+      "ES2020"
+    ],
+    "module": "commonjs",
+    "outDir": "out",
+    "rootDir": "src",
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "ES2020",
+    "types": [
+      "node",
+      "vscode"
+    ]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", ".vscode-test", "vitest.config.ts", "src/**/*.test.ts", "src/test/**"]
+  "exclude": [
+    "node_modules",
+    ".vscode-test",
+    "vitest.config.ts",
+    "src/**/*.test.ts",
+    "src/test/**"
+  ],
+  "include": [
+    "src/**/*.ts"
+  ]
 }
