--- a/package.json
+++ b/package.json
@@ -34,6 +34,16 @@
         "command": "kaiban.configurePRDPath",
         "icon": "$(folder)",
         "title": "Kaiban: Configure PRD Base Path"
+      },
+      {
+        "command": "kaiban.createPRD",
+        "icon": "$(file-text)",
+        "title": "Kaiban: Create PRD"
+      },
+      {
+        "command": "kaiban.createTask",
+        "icon": "$(tasklist)",
+        "title": "Kaiban: Create Task"
       }
     ],
     "configuration": {
@@ -115,7 +125,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
     "@types/node": "25.0.3",
-    "@types/vscode": "1.107.0",
+    "@types/vscode": "1.105.0",
     "@vitest/coverage-v8": "4.0.16",
     "@vitest/ui": "4.0.16",
     "@vscode/vsce": "3.7.1",
@@ -125,8 +135,9 @@
     "vitest": "4.0.16"
   },
   "displayName": "Kaiban Markdown",
+  "icon": "assets/icon.png",
   "engines": {
-    "vscode": "^1.99.0"
+    "vscode": "^1.105.0"
   },
   "keywords": [
     "kanban",
