--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
   "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
@@ -34,12 +34,14 @@
   "files": {
     "includes": [
       "**",
-      "!**/out/**",
-      "!**/node_modules/**",
-      "!**/build/**",
+      "!**/coverage",
+      "!**/node_modules",
+      "!**/.next",
+      "!**/dist",
+      "!**/out",
+      "!**/build",
       "!**/*.vsix",
-      "!**/coverage/**",
-      "!**/.husky/**"
+      "!**/.husky"
     ]
   }
 }
