--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
     "@types/node": "25.0.3",
-    "@types/vscode": "1.107.0",
+    "@types/vscode": "1.105.0",
     "@vitest/coverage-v8": "4.0.16",
     "@vitest/ui": "4.0.16",
     "@vscode/vsce": "3.7.1",
@@ -170,7 +170,7 @@
     "lint": "biome lint src/",
     "lint:fix": "biome lint --write src/",
     "package": "bun run compile && mkdir -p build && vsce package --no-dependencies --out build/",
-    "pre:install": "bun update --latest --recursive && bun install",
+    "pre:install": "bun update --latest --recursive && bun add -D @types/vscode@1.105.0",
     "prepare": "husky",
     "pretest": "bun run compile",
     "test": "vitest run",
