--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,13 @@
 {
-  "version": "0.2.0",
   "configurations": [
     {
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}", "${workspaceFolder}/.."],
       "name": "Run Extension",
-      "type": "extensionHost",
-      "request": "launch",
-      "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}",
-        "${workspaceFolder}/.."
-      ],
       "outFiles": ["${workspaceFolder}/out/**/*.js"],
       "preLaunchTask": "bun: compile",
-      "console": "integratedTerminal"
+      "request": "launch",
+      "type": "extensionHost"
     }
-  ]
+  ],
+  "version": "0.2.0"
 }
