--- a/package.json
+++ b/package.json
@@ -104,6 +104,56 @@
           "default": ".agent/PRDS",
           "description": "Base path for PRD (Product Requirements Document) files. PRD paths in task files will be resolved relative to this path.",
           "type": "string"
+        },
+        "kaiban.ralph.command": {
+          "default": "/ralph-loop:ralph-loop",
+          "description": "Ralph command to execute. Can be a Claude Code plugin command (e.g., /ralph-loop:ralph-loop) or a bash script path (e.g., bash /path/to/ralph-loop.sh)",
+          "type": "string"
+        },
+        "kaiban.ralph.maxIterations": {
+          "default": 5,
+          "description": "Maximum iterations for ralph-loop command",
+          "type": "number"
+        },
+        "kaiban.ralph.completionPromise": {
+          "default": "",
+          "description": "Completion promise template for ralph-loop. If empty, will use task description as completion signal.",
+          "type": "string"
+        },
+        "kaiban.claude.executablePath": {
+          "default": "claude",
+          "description": "Path to Claude CLI executable",
+          "type": "string"
+        },
+        "kaiban.claude.additionalFlags": {
+          "default": "",
+          "description": "Additional flags to pass to Claude CLI (e.g., --dangerously-skip-permissions)",
+          "type": "string"
+        },
+        "kaiban.claude.useRalphLoop": {
+          "default": false,
+          "description": "Use /ralph-loop plugin if available. When false, runs Claude directly with the task.",
+          "type": "boolean"
+        },
+        "kaiban.claude.promptTemplate": {
+          "default": "Read the task file at {taskFile} and implement it. The task contains a link to the PRD with full requirements. Update the task status to Done when complete.",
+          "description": "Prompt template for Claude execution. Use {taskFile} for the task file path.",
+          "type": "string"
+        },
+        "kaiban.skills.useAgentFolderInit": {
+          "default": false,
+          "description": "Use agent-folder-init Claude plugin to scaffold .agent/ folder (requires plugin installed via Claude CLI)",
+          "type": "boolean"
+        },
+        "kaiban.skills.useTaskPrdCreator": {
+          "default": false,
+          "description": "Use task-prd-creator Claude plugin when creating tasks (requires plugin installed via Claude CLI)",
+          "type": "boolean"
+        },
+        "kaiban.skills.useSessionDocumenter": {
+          "default": false,
+          "description": "Prompt to document session after task completion using session-documenter Claude plugin",
+          "type": "boolean"
         }
       },
       "title": "Kaiban Board"
