Add configurable task base path and task editing features to Kaiban Board
- Introduced a new configuration option `kaiban.task.basePath` in package.json to allow users to set a custom base path for task files.
- Updated `getTasksBasePath()` function to read the base path from configuration, ensuring backward compatibility with the default path.
- Implemented a task editing feature, enabling users to modify task details directly from the Kanban board interface.
- Added a confirmation modal for stopping task execution when moving tasks out of the 'Doing' column.
- Enhanced the UI with new styles and elements for task editing and confirmation modals.
- Updated tests to cover the new task base path configuration and editing functionalities, ensuring robust functionality.
- Revised README.md to include instructions for the new task base path setting and editing features.

--- a/biome.json
+++ b/biome.json
@@ -1,22 +1,25 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
-  "assist": { "actions": { "source": { "organizeImports": "on" } } },
-  "linter": {
-    "enabled": true,
-    "rules": {
-      "recommended": true,
-      "correctness": {
-        "noUnusedImports": "error",
-        "noUnusedVariables": "error"
-      },
-      "style": {
-        "useConst": "error",
-        "noNonNullAssertion": "warn"
-      },
-      "suspicious": {
-        "noExplicitAny": "warn"
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
       }
     }
+  },
+  "files": {
+    "includes": [
+      "**",
+      "!**/coverage",
+      "!**/node_modules",
+      "!**/.next",
+      "!**/dist",
+      "!**/out",
+      "!**/build",
+      "!**/*.vsix",
+      "!**/.husky"
+    ],
+    "maxSize": 1048576
   },
   "formatter": {
     "enabled": true,
@@ -31,17 +34,21 @@
       "trailingCommas": "es5"
     }
   },
-  "files": {
-    "includes": [
-      "**",
-      "!**/coverage",
-      "!**/node_modules",
-      "!**/.next",
-      "!**/dist",
-      "!**/out",
-      "!**/build",
-      "!**/*.vsix",
-      "!**/.husky"
-    ]
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "correctness": {
+        "noUnusedImports": "error",
+        "noUnusedVariables": "error"
+      },
+      "recommended": true,
+      "style": {
+        "noNonNullAssertion": "warn",
+        "useConst": "error"
+      },
+      "suspicious": {
+        "noExplicitAny": "warn"
+      }
+    }
   }
 }
