--- a/package.json
+++ b/package.json
@@ -16,24 +16,9 @@
         "title": "Kaiban: Refresh Board"
       },
       {
-        "command": "kaiban.configureProviders",
+        "command": "kaiban.configure",
         "icon": "$(settings-gear)",
-        "title": "Kaiban: Configure AI Providers"
-      },
-      {
-        "command": "kaiban.setApiKey",
-        "icon": "$(key)",
-        "title": "Kaiban: Set API Key"
-      },
-      {
-        "command": "kaiban.clearApiKey",
-        "icon": "$(trash)",
-        "title": "Kaiban: Clear API Key"
-      },
-      {
-        "command": "kaiban.configurePRDPath",
-        "icon": "$(folder)",
-        "title": "Kaiban: Configure PRD Base Path"
+        "title": "Kaiban: Configure Board Settings"
       },
       {
         "command": "kaiban.createPRD",
@@ -48,27 +33,6 @@
     ],
     "configuration": {
       "properties": {
-        "kaiban.ai.defaultModel": {
-          "default": "",
-          "description": "Default model (provider-specific, leave empty for provider default)",
-          "type": "string"
-        },
-        "kaiban.ai.defaultProvider": {
-          "default": "openrouter",
-          "description": "Default AI provider for tasks",
-          "enum": [
-            "cursor",
-            "openai",
-            "openrouter",
-            "replicate"
-          ],
-          "type": "string"
-        },
-        "kaiban.ai.streamResponses": {
-          "default": true,
-          "description": "Stream AI responses in real-time (when supported)",
-          "type": "boolean"
-        },
         "kaiban.claude.additionalFlags": {
           "default": "",
           "description": "Additional flags to pass to Claude CLI (e.g., --dangerously-skip-permissions)",
@@ -78,6 +42,13 @@
           "default": "claude",
           "description": "Path to Claude CLI executable",
           "type": "string"
+        },
+        "kaiban.claude.executionTimeout": {
+          "default": 30,
+          "description": "Maximum time in minutes to wait for task execution to complete before cleaning up tracking resources.",
+          "maximum": 120,
+          "minimum": 5,
+          "type": "number"
         },
         "kaiban.claude.promptTemplate": {
           "default": "Read the task file at {taskFile} and implement it. The task contains a link to the PRD with full requirements. Update the task status to Done when complete.",
@@ -110,24 +81,9 @@
           },
           "type": "array"
         },
-        "kaiban.cursor.autoCreatePr": {
-          "default": true,
-          "description": "Automatically create PR when Cursor agent completes",
-          "type": "boolean"
-        },
-        "kaiban.cursor.repositoryUrl": {
-          "default": "",
-          "description": "GitHub repository URL for Cursor Cloud Agent",
-          "type": "string"
-        },
         "kaiban.prd.basePath": {
           "default": ".agent/PRDS",
           "description": "Base path for PRD (Product Requirements Document) files. PRD paths in task files will be resolved relative to this path.",
-          "type": "string"
-        },
-        "kaiban.task.basePath": {
-          "default": ".agent/TASKS",
-          "description": "Base path for task files. Tasks will be created in and scanned from this directory.",
           "type": "string"
         },
         "kaiban.ralph.command": {
@@ -159,6 +115,11 @@
           "default": false,
           "description": "Use task-prd-creator Claude plugin when creating tasks (requires plugin installed via Claude CLI)",
           "type": "boolean"
+        },
+        "kaiban.task.basePath": {
+          "default": ".agent/TASKS",
+          "description": "Base path for task files. Tasks will be created in and scanned from this directory.",
+          "type": "string"
         }
       },
       "title": "Kaiban Board"
@@ -176,7 +137,7 @@
   "dependencies": {
     "lucide": "0.562.0"
   },
-  "description": "AI-powered Kanban board for markdown tasks from .agent/TASKS/",
+  "description": "Kanban board for Claude CLI task management. Execute markdown tasks via Claude Code directly from your board.",
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
     "@types/node": "25.0.6",
@@ -240,5 +201,5 @@
     "vscode:prepublish": "bun run compile",
     "watch": "tsc -watch -p ./"
   },
-  "version": "0.2.1"
+  "version": "0.3.0"
 }
