Add social preview script to package.json and refactor screenshot generation script
- Introduced a new script command in package.json for generating social media previews.
- Refactored the screenshot generation script for improved readability and consistency in formatting.
- Adjusted import order and indentation for better code clarity.

--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
     "prepare": "husky",
     "pretest": "bun run compile",
     "screenshot": "bun run scripts/generate-screenshot.ts",
+    "social-preview": "bun run scripts/generate-social-preview.ts",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
