Enhance multi-CLI support and update documentation
- Added configuration options for multiple CLI providers (Claude, Codex, Cursor) in package.json, allowing users to specify default execution settings.
- Updated README to reflect multi-CLI support, including detailed instructions for configuring and executing tasks with different CLIs.
- Verified production launch readiness by completing all checklist items, including testing, documentation, and branding assets.
- Fixed race condition in task execution to ensure reliable batch processing.
- Removed unused social preview template file to streamline project assets.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,23 @@
     ],
     "configuration": {
       "properties": {
+        "kaiban.cli.defaultProvider": {
+          "default": "auto",
+          "description": "Default CLI provider for task execution. Use 'auto' to automatically select the first available CLI.",
+          "enum": [
+            "auto",
+            "claude",
+            "codex",
+            "cursor"
+          ],
+          "enumDescriptions": [
+            "Automatically select the first available CLI (Claude > Codex > Cursor)",
+            "Use Claude CLI (claude command)",
+            "Use Codex CLI (codex command)",
+            "Use Cursor CLI (cursor command)"
+          ],
+          "type": "string"
+        },
         "kaiban.claude.additionalFlags": {
           "default": "",
           "description": "Additional flags to pass to Claude CLI (e.g., --dangerously-skip-permissions)",
@@ -59,6 +76,36 @@
           "default": false,
           "description": "Use /ralph-loop plugin if available. When false, runs Claude directly with the task.",
           "type": "boolean"
+        },
+        "kaiban.codex.additionalFlags": {
+          "default": "",
+          "description": "Additional flags to pass to Codex CLI",
+          "type": "string"
+        },
+        "kaiban.codex.executablePath": {
+          "default": "codex",
+          "description": "Path to Codex CLI executable",
+          "type": "string"
+        },
+        "kaiban.codex.promptTemplate": {
+          "default": "Read the task file at {taskFile} and implement it. The task contains a link to the PRD with full requirements. Update the task status to Done when complete.",
+          "description": "Prompt template for Codex execution. Use {taskFile} for the task file path.",
+          "type": "string"
+        },
+        "kaiban.cursor.additionalFlags": {
+          "default": "",
+          "description": "Additional flags to pass to Cursor CLI",
+          "type": "string"
+        },
+        "kaiban.cursor.executablePath": {
+          "default": "cursor",
+          "description": "Path to Cursor CLI executable",
+          "type": "string"
+        },
+        "kaiban.cursor.promptTemplate": {
+          "default": "Read the task file at {taskFile} and implement it. The task contains a link to the PRD with full requirements. Update the task status to Done when complete.",
+          "description": "Prompt template for Cursor execution. Use {taskFile} for the task file path.",
+          "type": "string"
         },
         "kaiban.columns.enabled": {
           "default": [
@@ -186,6 +233,7 @@
     "format:check": "biome format src/",
     "lint": "biome lint src/",
     "lint:fix": "biome lint --write src/",
+    "lint-staged": "lint-staged",
     "package": "bun run compile && mkdir -p build && vsce package --no-dependencies --out build/",
     "pre:install": "bun update --latest --recursive && bun add -D @types/vscode@1.105.0",
     "prepare": "husky",
